[gd_scene load_steps=33 format=3 uid="uid://y680px2bbryh"]

[ext_resource type="Texture2D" uid="uid://bt32fiu3xoaqm" path="res://src/img/player/Green Knight/1_head.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bytotj1tl7tv" path="res://src/img/player/Shared/Pants.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dpfdi4ebvx8rh" path="res://src/img/weapons/GSMace.png" id="3"]
[ext_resource type="Script" path="res://src/actors/Player.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://csgc8qkt75r8f" path="res://src/img/attacks/Light1_2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dkoo8fghuon7l" path="res://src/img/items/item_select.svg" id="7"]
[ext_resource type="Texture2D" uid="uid://b5f0kgbij0l6s" path="res://src/img/items/item_sandwich.svg" id="8"]
[ext_resource type="Texture2D" uid="uid://cn3kf5yom6hj4" path="res://src/img/player/Green Knight/1_body.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cjauh88vmjkbb" path="res://src/img/player/Shared/Hand.png" id="10"]
[ext_resource type="Texture2D" uid="uid://nchuf45807c" path="res://src/img/player/Shared/Foot.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cxx6u61ishdvp" path="res://src/img/attacks/Light1.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bjx2urjtyd5si" path="res://src/img/player/Green Knight/1_shield.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dv1f6so12smne" path="res://src/img/player/Green Knight/1_head_forward.png" id="14"]
[ext_resource type="Texture2D" uid="uid://q2y35acrt335" path="res://assets/918.svg" id="15"]
[ext_resource type="Texture2D" uid="uid://dmiokhbpn5gqo" path="res://assets/1063.svg" id="16"]
[ext_resource type="Texture2D" uid="uid://bbn6b5vrqfsea" path="res://assets/917.svg" id="17"]
[ext_resource type="Texture2D" uid="uid://eg7ii05kpyku" path="res://assets/477.svg" id="18"]
[ext_resource type="Texture2D" uid="uid://habxi560x6g6" path="res://src/img/player/Green Knight/1_head_down.png" id="19"]
[ext_resource type="Texture2D" uid="uid://dhedbrghra6f4" path="res://assets/938.svg" id="20"]
[ext_resource type="Texture2D" uid="uid://m472i5ow2hnd" path="res://assets/985.svg" id="21"]
[ext_resource type="Texture2D" uid="uid://cner5fmp0cq2v" path="res://src/img/player/Shared/Shadow.png" id="22"]
[ext_resource type="Texture2D" uid="uid://ckb057oq5pyqu" path="res://src/img/attacks/Light2.png" id="23"]
[ext_resource type="Texture2D" uid="uid://dpwcls4oard74" path="res://src/img/player/Green Knight/1_head_back.png" id="24"]
[ext_resource type="Texture2D" uid="uid://dnym6axoyekfp" path="res://src/img/attacks/Slam.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bm3bf4caxrsar" path="res://src/img/player/Green Knight/1_head_front.png" id="26"]
[ext_resource type="Texture2D" uid="uid://bo2d0u8plqlwc" path="res://src/img/player/Green Knight/1_body_side.png" id="27"]
[ext_resource type="Script" path="res://src/actors/CompositePlayerSprites.gd" id="28"]
[ext_resource type="Texture2D" uid="uid://7bdvt076y8cj" path="res://src/img/player/Green Knight/1_shield_front.png" id="29"]

[sub_resource type="ParticleProcessMaterial" id="25"]
emission_shape = 1
emission_sphere_radius = 24.0
spread = 0.0
gravity = Vector3(0, -100, 0)
color = Color(0.329412, 0.811765, 0.403922, 1)

[sub_resource type="RectangleShape2D" id="22"]
size = Vector2(20.072, 44.046)

[sub_resource type="RectangleShape2D" id="23"]
size = Vector2(15.4565, 1.71576)

[sub_resource type="RectangleShape2D" id="24"]
size = Vector2(69.741, 29.7346)

[node name="Player" type="CharacterBody2D"]
collision_mask = 8
script = ExtResource("5")
character_id = 1

[node name="PlayerSprite" type="Node2D" parent="."]
script = ExtResource("28")

[node name="magic_particles" type="GPUParticles2D" parent="PlayerSprite"]
position = Vector2(3, -20)
emitting = false
amount = 25
process_material = SubResource("25")
lifetime = 0.8
speed_scale = 2.0
randomness = 1.0

[node name="beefy_body_sprite" type="Sprite2D" parent="PlayerSprite"]
visible = false

[node name="beefy_left_arm" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(54.7178, -27.8927)
texture = ExtResource("16")

[node name="beefy_shield" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(64.8187, -15.1749)
texture = ExtResource("18")

[node name="beefy_left_foot" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(-1.59706, 15.7004)
texture = ExtResource("17")

[node name="beefy_right_foot" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(18.4231, 18.132)
texture = ExtResource("15")

[node name="beefy_body" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(7.75722, -29.386)
texture = ExtResource("20")

[node name="beefy_right_arm" type="Sprite2D" parent="PlayerSprite/beefy_body_sprite"]
position = Vector2(-32.6514, -31.8264)
texture = ExtResource("21")

[node name="normal_body_sprite" type="Sprite2D" parent="PlayerSprite"]

[node name="pants" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(-0.130001, 9.31626)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2")

[node name="left_arm" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(17.9287, -0.48066)
rotation = 1.5132
scale = Vector2(0.25, 0.25)
texture = ExtResource("10")
flip_v = true

[node name="left_foot" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(7.5313, 16.3662)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11")

[node name="right_foot" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(-8.48024, 16.6809)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11")

[node name="shield_front" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
visible = false
position = Vector2(-21.6904, -10.2256)
scale = Vector2(0.25, 0.25)
texture = ExtResource("29")

[node name="body" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(-1.51586, 0.816272)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9")

[node name="body_side" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
visible = false
position = Vector2(0.381271, 0.26442)
scale = Vector2(0.25, 0.25)
texture = ExtResource("27")

[node name="shield" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(26.1892, 2.13813)
scale = Vector2(0.25, 0.25)
texture = ExtResource("13")

[node name="right_arm" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(-13.7889, -2.21075)
rotation = 0.947714
scale = Vector2(0.25, 0.25)
texture = ExtResource("10")

[node name="weapon" type="Sprite2D" parent="PlayerSprite/normal_body_sprite"]
position = Vector2(7.83166, 8.62496)
rotation = 1.74533
scale = Vector2(0.15, 0.15)
texture = ExtResource("3")

[node name="light_attack_two_swung" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(13.6176, -14.2715)
scale = Vector2(0.25, 0.25)
texture = ExtResource("23")

[node name="light_attack_one_swung2" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(15.0331, -30.8027)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6")

[node name="light_attack_one_swung1" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(31.1917, -15.5148)
scale = Vector2(0.25, 0.25)
texture = ExtResource("12")

[node name="heavy_attack_swung" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(46.2109, -41.628)
scale = Vector2(0.25, 0.25)
texture = ExtResource("25")

[node name="head" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(3.10559, -27.1777)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1")

[node name="head_front" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(3.06496, -29.1564)
scale = Vector2(0.25, 0.25)
texture = ExtResource("26")

[node name="head_forward" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(2.56485, -26.7265)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14")

[node name="head_down" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(6.18442, -22.7321)
scale = Vector2(0.25, 0.25)
texture = ExtResource("19")

[node name="head_back" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(7.48321, -27.3143)
rotation = 0.301942
scale = Vector2(0.25, 0.25)
texture = ExtResource("24")

[node name="player_hitbox" type="Area2D" parent="PlayerSprite"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/player_hitbox"]
position = Vector2(2.52553, -19.9237)
shape = SubResource("22")

[node name="item_select" type="Sprite2D" parent="PlayerSprite"]
visible = false
position = Vector2(1.36348, -108.973)
scale = Vector2(0.683663, 0.710423)
texture = ExtResource("7")

[node name="item_sandwich" type="Sprite2D" parent="PlayerSprite/item_select"]
position = Vector2(0.490237, 1.62668)
scale = Vector2(1.46271, 1.40761)
texture = ExtResource("8")

[node name="shadow" type="Sprite2D" parent="."]
position = Vector2(-0.500565, 20.9516)
scale = Vector2(0.25, 0.25)
texture = ExtResource("22")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.78622, 19.08)
shape = SubResource("23")

[node name="light_attack_hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="light_attack_hitbox"]
position = Vector2(33.1126, -15.9951)
shape = SubResource("24")
